My first Portfolio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Hello I'm
             <p><span class="orange-highlight">Faiyad Ahmed</span></p>
             </h1>
-            <h3>A full stack professional web designer & web development</h3>
+            <h3>A full stack professional web designer & web developer</h3>
             <a class="link-button" target="_blank" href="https://www.facebook.com/faiyadahmed.sudipto.1/">Visit Facebook</a>
         </div>
         <div class="half-width">
@@ -41,7 +41,7 @@
         </div>
         <div class="half-width">
             <h2>About Myself</h2>
-            <h4>I am a junior web developer of class nine from Bangladesh. I learn to creat basic portfolio website from Jhankar Mahbub. I am trying my best to be a good level developer. I have knowledge on Html, CSS and Python3. I also love designing. I love to share designing & development experience with others. You can see some example of my working here.</h4>
+            <h4>I am a junior web developer of class nine from Bangladesh. I am learn to creat basic portfolio website from Jhankar Mahbub. I am trying my best to be a good level developer. I have knowledge on Html, CSS and Python3. I also love designing. I love to share designing & development experience with others. You can see some example of my working here.</h4>
             <a class="link-button" target="_blank" href="https://www.instagram.com/designprospection/">Follom Instagram</a>
         </div>
     </section>
