My First Portfolio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="half-width">
             <h2>About Myself</h2>
-            <h4>I am a junior web developer of class nine from Bangladesh. I am learn to creat basic portfolio website from Jhankar Mahbub. I am trying my best to be a good level developer. I have knowledge on Html, CSS and Python3. I also love designing. I love to share designing & development experience with others. You can see some example of my working here.</h4>
+            <h4>I am a junior web developer of class nine from Bangladesh. I am learning to creat basic portfolio website from Jhankar Mahbub. I am trying my best to be a good level developer. I have knowledge on Html, CSS and Python3. I also love designing. I love to share designing & development experience with others. You can see some example of my working here.</h4>
             <a class="link-button" target="_blank" href="https://www.instagram.com/designprospection/">Follom Instagram</a>
         </div>
     </section>
